--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,3 +15,4 @@ jobs:
       run: |
         echo ${{ steps.hello.outputs.memory }}
         echo "total memory successfully output"
+        docker image ls
